# mercury-indexer-asset-price-estimator

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  query_exchange_rate.sh  zephyr.toml
scripts/: build_query.sh  check_force.sh  deploy.sh  deploy_config.sh  deploy_function.sh  env_loader.sh  query_args.sh  query_config.sh  query_exchange_rate.sh
scripts/deploy/: deploy.sh  deploy_config.sh  deploy_function.sh
scripts/query/: build_query.sh  history_request.json  query_args.sh  query_config.sh  query_exchange_rate.sh
src/: api.rs  api_extras.rs  config.rs  db.rs  exchange_rate.rs  filter.rs  filter_transactions.rs  format.rs  formatting.rs  lib.rs  log.rs  logger.rs  path_payments.rs  swap.rs  transaction.rs  transaction_filter.rs  utils.rs
src/api/: extras.rs  mod.rs  rates_history.rs  shared.rs
src/config/: mod.rs  scam_addresses.rs  soroswap_tokens.rs
src/constants/: mod.rs  soroswap_tokens.rs
src/db/: exchange_rate.rs  mod.rs  models.rs  savepoint.rs  swap.rs
