[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = [ "blocking" ]}
serde = "1.0.210"
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
zephyr-sdk = "0.2.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
