[package]
name = "kwickbit"
version = "0.1.1"
edition = "2021"

[dependencies]
hex = "0.4.3"
itertools = "0.13.0"
serde = "1.0.210"
serde_json = "1.0.128"
stellar-strkey = "0.0.11"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
zephyr-sdk = { version = "0.2.4", git="https://github.com/xycloo/rs-zephyr-toolkit", rev="3054505" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
